--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,20 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 24
-    buildToolsVersion "24.0.2"
-
+    signingConfigs {
+        config {
+            keyAlias 'datou_key'
+            keyPassword 'adgjm2223'
+            storeFile file('/Users/lijunkui/code/android/datou.key')
+            storePassword 'adgjm2223'
+        }
+    }
+    compileSdkVersion 25
+    buildToolsVersion '26.0.2'
     defaultConfig {
-        applicationId "com.example.luegg.oa"
+        applicationId "com.lugg.longgang.oa"
         minSdkVersion 19
-        targetSdkVersion 24
+        targetSdkVersion 25
         versionCode 1
         versionName "1.0"
     }
@@ -15,9 +22,9 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.config
         }
     }
-
     sourceSets {
         main {
             jniLibs.srcDirs = ['libs']
@@ -26,21 +33,22 @@ android {
 }
 
 ext {
-    frescoVersion = '0.13.0'
+    sdkVersion = '25.1.1'
+    frescoVersion = '1.2.0'
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
-
     compile "com.facebook.fresco:fresco:${frescoVersion}"
-
-    compile 'com.android.support:appcompat-v7:24.2.1'
-    compile 'com.android.support:recyclerview-v7:24.2.1'
-    compile 'com.android.support:cardview-v7:24.2.1'
+    compile 'com.ss.bannerslider:bannerslider:1.8.0'
+    compile 'com.github.stfalcon:frescoimageviewer:0.5.0'
+    compile "com.android.support:appcompat-v7:${sdkVersion}"
+    compile "com.android.support:recyclerview-v7:${sdkVersion}"
+    compile "com.android.support:cardview-v7:${sdkVersion}"
     compile 'com.chanven.lib:cptr:1.1.0'
     compile 'com.alibaba:fastjson:1.2.41'
     compile 'com.squareup.okhttp3:okhttp:3.9.1'
     compile 'com.github.franmontiel:PersistentCookieJar:v1.0.1'
-    compile 'com.android.support:design:24.2.1'
+    compile "com.android.support:design:${sdkVersion}"
 }
